# bevy-triangle

./: Cargo.toml
assets/: shader.wgsl
src/: main.rs
src/render/: draw.rs  meta.rs  mod.rs  node.rs  pipeline.rs  vertex.rs
src/render/systems/: mod.rs  queue.rs
